add education branch #2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,9 @@
 			<app-work-experience></app-work-experience>
 		</td>
 		<td>
+			<app-education></app-education>
+		</td>
+		<td>
 			sprint 2 here...
 		</td>
 		<tr>
