--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,19 @@
 <table border="1">
-	<tr>
-		<td colspan="2">
-			<app-header></app-header>
-		</td>
-	</tr>
-	<tr>
-		<td>
-			<app-work-experience></app-work-experience>
-		</td>
-		<td>
-			<app-education></app-education>
-		</td>
-		<td>
-			sprint 2 here...
-		</td>
-		<tr>
-	</table>
+  <tr>
+    <td colspan="2">
+      <app-header></app-header>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <app-work-experience></app-work-experience>
+      <app-education></app-education>
+    </td>
+    <td>
+      <app-skills></app-skills>
+      <app-achievements></app-achievements>
+      <app-language></app-language>
+      <app-interests></app-interests>
+    </td>
+  </tr>
+</table>
