--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
 			<p>Ser SNI 3 y, tener cuadritos</p>
 		</td>
 		<td>
-			<img src="https://scontent-qro1-2.cdninstagram.com/v/t51.29350-15/324384039_873061947278719_7790905927733197341_n.webp?stp=dst-jpg_e35&efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi4xMDgweDEwODAuc2RyLmYyOTM1MC5kZWZhdWx0X2ltYWdlIn0&_nc_ht=scontent-qro1-2.cdninstagram.com&_nc_cat=107&_nc_ohc=JTCCxBDUOL8Q7kNvgG_q4_1&edm=AEhyXUkBAAAA&ccb=7-5&ig_cache_key=MzAxMjg3NTI5NjEwMjQ2OTU2NA%3D%3D.2-ccb7-5&oh=00_AYD2P5uA2LZQf6OLK7qHZ3xyw7rpGV7cWVpre4sT8Phyew&oe=66D3E676&_nc_sid=8f1549" width="100" heigth="100">
+			<img src="https://scontent-qro1-2.xx.fbcdn.net/v/t39.30808-6/415084776_1756442718189108_3316276735948922761_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeEuMiO0d9HmsfrGxLK3YYa0WunPyqU9BgJa6c_KpT0GAjNkKpU5ak4r0n7xbQGLn0F24p_R8Gn4hFb51UHRTWAn&_nc_ohc=eqJl5AHjOy4Q7kNvgE1Dv_5&_nc_ht=scontent-qro1-2.xx&oh=00_AYA2qpyb_5PWfc08JxKt7_EA0JVxneiAEE5_ytqp0mxiow&oe=66F52A56" width="100" heigth="100">
 		</td>
 
 		<td>
