--- a/src/app/language/language.component.css
+++ b/src/app/language/language.component.css
@@ -34,7 +34,7 @@ table {
     width: 90%;
     max-width: 1000px;
     border-collapse: collapse;
-    background-color: #111a40; /* Azul más oscuro para contraste */
+    background-color: #163824; /* Verde oscuro para contraste */
     border-radius: 12px;
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3); /* Sombra sutil */
     padding: 20px;
@@ -63,14 +63,14 @@ ul li:before {
     display: block;
     width: 100%;
     height: 1px;
-    background-color: #ff66b3; /* Rosa brillante */
+    background-color: #66ff99; /* Verde brillante */
     margin-bottom: 4px;
     opacity: 0.4;
 }
 
 /* Estilo del hover en la lista */
 ul li:hover {
-    color: #66ff99; /* Verde brillante en hover */
+    color: #ff66b3; /* Hover en rosa brillante */
     cursor: pointer;
 }
 
